--- a/paytml.css
+++ b/paytml.css
@@ -1,17 +1,16 @@
 * {
     margin: 0;
     padding: 0;
-
 }
 
 .Main {
     height: 100vh;
     width: 100%;
-    background-color: aliceblue;
+    background-color:aliceblue;
+    
 }
 
 .navbar {
-
     height: 65px;
     padding-left: 175px;
     padding-right: 175px;
@@ -19,7 +18,7 @@
     align-items: center;
     display: flex;
     background-color: white;
-    font-family: 'Inter', sans-serif;
+    font-family: "Inter", sans-serif;
     font-size: 15px;
     font-weight: 500;
     color: #000;
@@ -33,7 +32,6 @@
 }
 
 .nav-items5 {
-
     display: flex;
     align-items: center;
     border-radius: 50px;
@@ -41,8 +39,6 @@
     width: 111px;
     color: white;
     background-color: #002970;
-
-
 }
 
 #plo {
@@ -57,29 +53,33 @@
     margin-top: 15px;
     margin-left: 400px;
     margin-right: 400px;
+    display: flex;
+}
 
+.con02{
+    width: 100%;
+    height: 40vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .con2 {
-
-    margin-top: 20px;
-    margin-left: 175px;
-    margin-right: 175%;
     height: 35vh;
-    width: 100%;
-    font-family: 'Inter', sans-serif;
+    width: 55%;
+    font-family: "Inter", sans-serif;
     font-size: 15px;
     font-weight: 500;
     color: #000;
     cursor: pointer;
-    background-color: aqua;
-
-
+    align-items: center;
+    justify-content: center;
+    
 }
 
 .nav {
     height: 60px;
-    font-family: 'Inter', sans-serif;
+    font-family: "Inter", sans-serif;
     align-items: center;
     display: flex;
     justify-content: flex-start;
@@ -94,80 +94,192 @@ h3 {
 }
 
 .item {
-    width: 57%;
-    justify-content: center;
-    align-items: center;
-    display: flex;
-    font-family: 'Inter', sans-serif;
+    width: 100%;
+    font-family: "Inter", sans-serif;
     font-size: 15px;
     font-weight: 500;
     color: #000;
     cursor: pointer;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+
 }
 
 .item1 {
     height: 148px;
     width: 124px;
-    border: 2px solid black;
     margin-right: 2%;
     margin-left: 2%;
-    background-color:green;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+   
+    
+
 }
 
 .item01 {
-
     height: 74px;
-    background-color:goldenrod;
-
+    display: flex;
+    flex-direction: column;
+   align-items: center;
+   justify-content: center;
 }
 
 .item2 {
     height: 148px;
     width: 124px;
-    border: 2px solid black;
     margin-right: 2%;
     margin-left: 2%;
-
+     display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+.item02 {
+ height: 74px;
+    display: flex;
+    flex-direction: column;
+   align-items: center;
+   justify-content: center;
 }
 
 .item3 {
     height: 148px;
     width: 124px;
-    border: 2px solid black;
     margin-right: 2%;
     margin-left: 2%;
-
+     display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+.item03{
+    height: 74px;
+    display: flex;
+    flex-direction: column;
+   align-items: center;
+   justify-content: center;
 }
 
 .item4 {
     height: 148px;
     width: 124px;
-    border: 2px solid black;
     margin-right: 2%;
     margin-left: 2%;
-
+   display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+.item04{
+     height: 74px;
+    display: flex;
+    flex-direction: column;
+   align-items: center;
+   justify-content: center;
 }
 
 .item5 {
     height: 148px;
     width: 124px;
-    border: 2px solid black;
     margin-right: 2%;
     margin-left: 2%;
-
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+.item05{
+      height: 74px;
+    display: flex;
+    flex-direction: column;
+   align-items: center;
+   justify-content: center;
 }
 
 .item6 {
     height: 148px;
     width: 124px;
-    border: 2px solid black;
     margin-right: 2%;
     margin-left: 2%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+.item06{
+     height: 74px;
+    display: flex;
+    flex-direction: column;
+   align-items: center;
+   justify-content: center;
+}
+
+.con3 {
+    width: 30%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 
 }
-.con3{
+.con4{
+width: 100%;
+height: 15vh;
+gap:1%;
+display: flex;
+justify-content:center;
+align-items: center;
 
-width: 30%;
-background-color: rgb(24, 32, 9);
- 
 }
+
+.con5{
+    height: 20vh;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 1%;
+    
+}
+.co1 img{
+    border-radius: 15px;
+    display: block;
+}
+.co2 img{
+    border-radius: 15px;
+    display: block;
+}
+.co3 img{
+    border-radius: 15px;
+    display: block;
+}
+.con8{
+    height: 43vh;
+    width: 100%;
+}
+.first{
+    height: 13vh;
+    width: 100%;
+    background-color: brown;
+    display: flex;
+    align-items: start;
+    justify-content: start;  
+}
+
+
+/* .paytra{
+    
+    justify-content: flex-end;
+    align-items: end;
+} */
+
+
+.second{
+    height: 30vh;
+    width: 100%;
+    background-color: coral;
+}
+
